added todo example

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "yeet",
+  "name": "@bobfp/yeet",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/yeet.js",
   "license": "MIT",
   "scripts": {
     "dev": "parcel src/index.html"
