--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "src/yeet.js",
   "license": "MIT",
   "scripts": {
-    "dev": "parcel src/index.html"
+    "dev": "parcel src/index.html",
+		"test": "jest --watchAll"
   },
   "dependencies": {
     "react": "^16.8.6",
@@ -13,11 +14,19 @@
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^24.8.0",
+    "jest": "^24.8.0",
     "parcel-bundler": "^1.12.3"
   },
   "babel": {
     "presets": [
       "@babel/preset-react"
-    ]
+    ],
+		"env": {
+			"test": {
+				"plugins": ["transform-es2015-modules-commonjs"]
+			}
+  }
+
   }
 }
