--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "parcel src/index.html",
-		"test": "jest --watchAll"
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "react": "^16.8.6",
@@ -14,7 +14,9 @@
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "@testing-library/react": "^8.0.5",
     "babel-jest": "^24.8.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "jest": "^24.8.0",
     "parcel-bundler": "^1.12.3"
   },
@@ -22,11 +24,12 @@
     "presets": [
       "@babel/preset-react"
     ],
-		"env": {
-			"test": {
-				"plugins": ["transform-es2015-modules-commonjs"]
-			}
-  }
-
+    "env": {
+      "test": {
+        "plugins": [
+          "transform-es2015-modules-commonjs"
+        ]
+      }
+    }
   }
 }
