--- a/package.json
+++ b/package.json
@@ -1,35 +1,64 @@
 {
-  "name": "@bobfp/yeet-state",
-  "version": "1.0.0",
-  "main": "src/yeet.js",
-  "license": "MIT",
-  "scripts": {
-    "dev": "parcel src/index.html",
-    "test": "jest --watchAll"
+ "name": "@bobfp/yeet-state",
+ "version": "1.0.0",
+ "main": "lib/index.js",
+ "jsnext:main": "es/index.js",
+ "module": "es/index.js",
+ "license": "MIT",
+ "scripts": {
+  "compile:commonjs": "better-npm-run compile:commonjs",
+  "compile:umdmin": "uglifyjs dist/yeet-state.js -mt -o dist/yeet-state.min.js",
+  "compile:umd": "better-npm-run compile:umd",
+  "compile:es": "babel -d es/ src/",
+  "compile": "npm run compile:commonjs && npm run compile:umd && npm run compile:umdmin && npm run compile:es",
+  "test": "jest"
+ },
+ "dependencies": {},
+ "peerDependencies": {
+  "react": "^16.8.6",
+  "react-dom": "^16.8.6"
+ },
+ "devDependencies": {
+  "@babel/cli": "^7.5.5",
+  "@babel/core": "^7.4.5",
+  "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+  "@babel/plugin-transform-arrow-functions": "^7.0.0",
+  "@babel/plugin-transform-block-scoping": "^7.0.0",
+  "@babel/plugin-transform-computed-properties": "^7.2.0",
+  "@babel/plugin-transform-function-name": "^7.0.0",
+  "@babel/plugin-transform-modules-commonjs": "^7.0.0",
+  "@babel/plugin-transform-modules-umd": "^7.0.0",
+  "@babel/plugin-transform-parameters": "^7.0.0",
+  "@babel/plugin-transform-shorthand-properties": "^7.0.0",
+  "@babel/plugin-transform-spread": "^7.0.0",
+  "@babel/plugin-transform-template-literals": "^7.0.0",
+  "babel-core": "^7.0.0-bridge.0",
+  "babel-jest": "^23.4.2",
+  "babel-upgrade": "^1.0.1",
+  "better-npm-run": "^0.1.1",
+  "jest": "^24.8.0",
+  "mkdirp": "^0.5.1",
+  "parcel-bundler": "^1.12.3",
+  "uglify-js": "^3.6.0"
+ },
+ "betterScripts": {
+  "test": {
+   "command": "jest",
+   "env": {
+    "NODE_ENV": "test"
+   }
   },
-  "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+  "compile:commonjs": {
+   "command": "babel -d lib/ src/",
+   "env": {
+    "NODE_ENV": "commonjs"
+   }
   },
-  "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "@testing-library/react": "^8.0.5",
-    "babel-jest": "^24.8.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "jest": "^24.8.0",
-    "parcel-bundler": "^1.12.3"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-react"
-    ],
-    "env": {
-      "test": {
-        "plugins": [
-          "transform-es2015-modules-commonjs"
-        ]
-      }
-    }
+  "compile:umd": {
+   "command": "mkdirp dist/ && babel -o dist/yeet-state.js src/",
+   "env": {
+    "NODE_ENV": "umd"
+   }
   }
+ }
 }
